added missing insight in jupyter notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -352,7 +352,9 @@
    },
    "source": [
     "**Insight:**\n",
-    "- xxx"
+    "- Pemilihan orders_df dan order_reviews_df memastikan data yang dikumpulkan relevan dengan analisis kepuasan pelanggan dan efisiensi pengiriman.\n",
+    "- Menggunakan hanya dua dataset utama mengurangi kompleksitas, memungkinkan pemrosesan data yang lebih cepat dan lebih terstruktur.\n",
+    "- Mengambil data dari Kaggle memastikan dataset yang bersih dan terorganisir, mempermudah tahap eksplorasi dan analisis lebih lanjut."
    ]
   },
   {
@@ -745,13 +747,6 @@
    ],
    "source": [
     "orders_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Terdapat keanehan pada pembelian 2018 namun estimated delivery date 2017"
    ]
   },
   {
