fixed insight in notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -352,9 +352,9 @@
    },
    "source": [
     "**Insight:**\n",
-    "- Pemilihan orders_df dan order_reviews_df memastikan data yang dikumpulkan relevan dengan analisis kepuasan pelanggan dan efisiensi pengiriman.\n",
-    "- Menggunakan hanya dua dataset utama mengurangi kompleksitas, memungkinkan pemrosesan data yang lebih cepat dan lebih terstruktur.\n",
-    "- Mengambil data dari Kaggle memastikan dataset yang bersih dan terorganisir, mempermudah tahap eksplorasi dan analisis lebih lanjut."
+    "- orders_review sepertinya memiliki banyak kolom judul dan pesan komentar yang kosong\n",
+    "- Tidak ada kolom untuk delivery time pada orders_df, sehingga harus membuat sendiri\n",
+    "- Menggunakan hanya dua dataset utama mengurangi kompleksitas, memungkinkan pemrosesan data yang lebih cepat dan lebih terstruktur."
    ]
   },
   {
