fixed date filter not working

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -626,7 +626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tidak ada nilai outlier untuk ulasan"
+    "Tidak ada nilai outlier untuk ulasan. Skor menggunakan bilangan bulat untuk menggambarkan bintang 1 sampai bintang 5"
    ]
   },
   {
